courses/430_programming-languages/assignment-6/tests/error/hw4_error12.correct
operator '||' requires bool * bool, found none * bool
